# ChangeLog for media-video/nvclock
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/nvclock/ChangeLog,v 1.23 2007/11/27 12:36:28 zzam Exp $

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> nvclock-0.7-r1.ebuild,
  nvclock-0.7-r2.ebuild, nvclock-0.8_beta2.ebuild:
  Fixed quoting.

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> nvclock-0.7-r2.ebuild:
  x86 stable wrt security #184071

*nvclock-0.7-r2 (05 Jul 2007)

  05 Jul 2007; Tavis Ormandy <taviso@gentoo.org>
  +files/nvclock-insecure-tmp.diff, +nvclock-0.7-r2.ebuild:
  emergency bump by security team #184071 - ** do not assign me bugs **

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  01 May 2007; Marius Mauch <genone@gentoo.org> nvclock-0.7-r1.ebuild,
  nvclock-0.8_beta2.ebuild:
  Replacing einfo with elog

*nvclock-0.8_beta2 (14 Oct 2006)

  14 Oct 2006; <malverian@gentoo.org> +files/nvclock_acinclude_qtlibs.patch,
  nvclock-0.7-r1.ebuild, +nvclock-0.8_beta2.ebuild, -nvclock-0.8b.ebuild:
  Fix compile problem with USE=qt3 when Qt4 is installed (#114872).
  Compilation fix with USE=qt3 on AMD64. Version bump (#143023, #107334).

  24 Jun 2006; Doug Goldstein <cardoe@gentoo.org> nvclock-0.7-r1.ebuild,
  nvclock-0.8b.ebuild:
  USE flag qt->qt3/qt4 change bug #137785

  31 Aug 2005; <malverian@gentoo.org> nvclock-0.8b.ebuild:
  Explicitly disable qt support unless use flag is set

*nvclock-0.8b (30 Aug 2005)

  30 Aug 2005; <malverian@gentoo.org> +nvclock-0.8b.ebuild:
  Version bump, bug #104281. Works on amd64 and x86.

  06 Oct 2004; Patrick Kursawe <phosphan@gentoo.org> +files/callbacks.patch,
  nvclock-0.7-r1.ebuild:
  Adding fix from bug #38251. Thanks!

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  nvclock-0.7-r1.ebuild:
  virtual/glibc -> virtual/libc

  06 Dec 2003; <spider@gentoo.org> nvclock-0.7-r1.ebuild:
  Removed gtk2 IUSE statement

*nvclock-0.7-r1 (05 Nov 2003)
