@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX callbacks.patch 837 RMD160 3703f3b3255ddae3b30354878017b421822260d7 SHA1 57cb431efcf66b64dedf06fb4c6904291bbfae97 SHA256 e245f38d0a837d877c601cf05e414d91c26741320ee3469a6fb98484eefb35d5
 AUX configure.in.diff 348 RMD160 e8a01a4d812d263a00d90e5fbceea8c64a6a54b2 SHA1 68c5bef3177dc63ff9c98b0e47ecbc40e6a15881 SHA256 0ac1e484f04f155d8e2182652951f900880b943435f53bfa403ece38ccce1660
 AUX nvclock-insecure-tmp.diff 1093 RMD160 8fe8a704c8397d1f4c56a57f2e7e37c0faf24276 SHA1 e9e18d5127af4ce4e2162c785e4e165eaeda44c5 SHA256 572d40f5e0f3e91b74d7f4b0b88ff63fce28aa109b7f8f32529812d66ac7af10
@@ -9,5 +12,12 @@ DIST nvclock0.8b2.tar.gz 316510 RMD160 1c8aff1a0f2bd472f9d5296d2d575823b2cb5107 
 EBUILD nvclock-0.7-r1.ebuild 1312 RMD160 dc4b3682df88b519124e31d7de498ff8bdf4e5a2 SHA1 caf11d14ef6ca85ca7430cfb6e087444264c938e SHA256 6e4263fefaaf5987e567003ad96f35956165dd20fa7019f9cd77f4c64e7e586d
 EBUILD nvclock-0.7-r2.ebuild 1359 RMD160 995d07671bd5eb9c609645208a657cc73f82a20e SHA1 f133f2b2400bad909aa15f67f79f6042b5c3cc5e SHA256 d8a662121f686b638d9bfbe1ef5001ba61f4a1b5bce2b08076b0696e0f0bc1c9
 EBUILD nvclock-0.8_beta2.ebuild 1608 RMD160 2a6406d05ddb414cbb13d2ec97240bb65abb340b SHA1 6ec7f4dbbfc8dbc9c17d87f1919bbaa266253a48 SHA256 a6eede298ef93b18934bb30ad2dec0758378e4c375ade2c64499c5ba93065bd0
-MISC ChangeLog 3458 RMD160 9132496e18912a38d90a6e19bbb96c80bc47c934 SHA1 d9f45fc0bb3293b195703f6f27983fdd69c4814f SHA256 9f99a81fe5f169aae4e28549945aa1410fba9cb7dbac7a5e7ccb8b4dc6564748
-MISC metadata.xml 250 RMD160 141e40caacd495033a124ed5f8a4142694cce026 SHA1 5608ecab58906c97a77373e4e90c10b36eebf083 SHA256 db6d4fafc6bb2acf20963d93fbe6a504138aeb5ad37366217fb2d7bb64e2e7c8
+MISC ChangeLog 3641 RMD160 a45220bc9c01285e2a50ecd45557cfcfa946fc25 SHA1 a000162ceeabf1fc7d87d80494950d203f0d995e SHA256 add90c83cbbaea89117aa53fbc5b8bff5100c5327ac2366c3dc1001258543eae
+MISC metadata.xml 394 RMD160 07b282c2ed119fe065cfe3bbeca6ed002f31c4f8 SHA1 6b1fa0b9a38f58f14050b976a8d96465a6e83a9c SHA256 33a5ee93d6e17c49e2ede1ecf237c27ee97d331f9912b9252f693385bc826dc4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFIDNK/yuNVb5qfaOYRAnrDAJ0QjJCKH7b7bsKC2/CswcHHaxh2qQCfVXBw
+EQo5ibw97RagIJ5eqnFw0U4=
+=L1pB
+-----END PGP SIGNATURE-----
