@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-
 <pkgmetadata>
-<herd>no-herd</herd>
-
-	<longdescription>A utility for overclocking NVidia based video cards</longdescription>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>maintainer-needed@gentoo.org</email>
+		<name>Default assignee for orphaned packages</name>
+	</maintainer>
+	<longdescription lang="en">
+		A utility for overclocking NVidia based video cards.
+	</longdescription>
 </pkgmetadata>
