@@ -1,6 +1,10 @@
 # ChangeLog for media-video/nvclock
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvclock/ChangeLog,v 1.23 2007/11/27 12:36:28 zzam Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvclock/ChangeLog,v 1.24 2008/04/21 17:45:30 phreak Exp $
+
+  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Fix up metadata.xml. If there's no maintainer for the package, the metadata
+  also needs to contain m-needed@g.o.
 
   27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> nvclock-0.7-r1.ebuild,
   nvclock-0.7-r2.ebuild, nvclock-0.8_beta2.ebuild:
